{
    "name": "BoardInputAction",
    "maps": [
        {
            "name": "Board",
            "id": "385c8322-2516-4351-be3a-0412f7b6b160",
            "actions": [
                {
                    "name": "ForwardMovement",
                    "type": "Value",
                    "id": "618f0610-43ed-4acf-a270-364631746c29",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turning",
                    "type": "Value",
                    "id": "a12c03c1-adf9-4602-b768-9b12b7fd3275",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FlyUp",
                    "type": "Button",
                    "id": "9c5547cf-bf30-4ea4-9bfc-d6f2a0f4f23d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FlyDown",
                    "type": "Button",
                    "id": "ce31a3ce-5e20-495a-ac6a-89cb84b53552",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BoardBoost",
                    "type": "Button",
                    "id": "024e8409-fc93-4551-bb1a-cbfde778558f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotatePitchRoll",
                    "type": "Value",
                    "id": "75527b77-b6fc-444f-a505-900aaca33fb1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LevelOut",
                    "type": "Button",
                    "id": "f571b0eb-9be3-4c06-bd50-842aa0194a3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af7586ac-5e70-4d56-91cc-10d6d25ed56f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press(pressPoint=0.05,behavior=2)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "FlyUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ce4906c-f278-446f-8aa0-48c13674b128",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(pressPoint=0.05,behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FlyUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eccb39c2-ab18-4ce2-89cc-099c55874099",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press(pressPoint=0.05,behavior=2)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "FlyDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c4ee3f5-de74-484d-a6ef-57dfa00a2c91",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(pressPoint=0.05,behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FlyDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "1a0b06e3-468b-4e54-96c1-e5837bb7d86c",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "9d7660fc-7f88-4cfd-ac24-6bcd278ef012",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ForwardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "c3159f72-0a6c-437b-af00-c367a9878189",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ForwardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "0a0bd862-4564-4920-bcfa-a626c3c8172b",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "f6288086-ccd2-4cbf-a4e5-2dc468802bf0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ForwardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "f5fa9ab5-ba45-4835-84f5-5d19dbe835be",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ForwardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "63b69472-d236-41b1-aa96-29b21ecdf588",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "Turning",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "885696de-1c18-4ed7-b4fc-fc64aa4416aa",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turning",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "d798fc27-ab75-41aa-9832-7b3f1a354852",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Turning",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "e9d5baa7-bdd1-49ec-8645-304f000ec0ff",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Turning",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ed3d7958-aebb-41e9-b371-4d5e48480cd0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "BoardBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2984dd7a-60e5-42e2-aadc-fac967b8dfb0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BoardBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b38895e-de09-403f-be29-6fb4c8ba32c9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotatePitchRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5baf83ca-6b71-42a1-a3a1-451d253e81cb",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LevelOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}